fix(test): improved test compatibility